закончен CompilationServiceImpl